# OrderServiceAPI

./: .gitignore  Dockerfile  Makefile  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  readme.md  solution.md
.test-reports/: test-run.xml
src/app/: exceptions.py  main.py  settings.py
src/app/api/: __init__.py  api.py
src/app/api/endpoints/: health.py  order.py
src/app/models/: order.py  outbox.py
src/app/repositories/: order.py
src/app/schemas/: order.py
src/app/schemas/enums/: order.py
src/app/services/: order.py
src/app/workers/: __init__.py  outbox_worker.py
src/app/workers/enums/: outbox.py
src/migration/: env.py
src/migration/versions/: 05e52ff84031_create_order_table.py  ee31b8819551_create_order_outbox_table.py
src/tests/api/endpoints/: health_test.py  meta_test.py  order_test.py
src/tests/integration/: order_integration_test.py
src/tests/workers/: outbox_worker_test.py
