[project]
name = "order-service"
version = "0.1.0"
description = "This is a system that allows users to create stock orders"
authors = [
    {name = "Marline Khavele",email = "khavelemarline@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
alembic = "^1.17.2"
pytest = "^9.0.1"
pytest-cov = "^7.0.0"
fastapi = "^0.121.2"
uvicorn = "^0.38.0"
psycopg2 = "^2.9.11"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.44"
pydantic = "^2.12.4"
pydantic-settings = "^2.11.0"
greenlet = "^3.2.4"
pre-commit = "^4.4.0"
pytest-asyncio = "^1.3.0"
